Connecting to apis and rendering weather data

--- a/app/views/weather/new.html.erb
+++ b/app/views/weather/new.html.erb
@@ -1,6 +1,11 @@
-<div>
-  <label for="address" class="block text-sm/6 font-medium text-gray-900">address</label>
-  <div class="mt-2">
-    <input type="address" name="address" id="address" class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" placeholder="you@example.com">
-  </div>
-</div>
+<%= turbo_frame_tag "main", class: "flex flex-1 self-stretch" do %>
+  <%= turbo_stream_from(session[:session_id], "forecast") if session[:session_id].present? %>
+  <% flash.each do |key, value| %>
+    <div class="text-center">
+      <div role="status">
+        <span class="text-sm font-light text-gray-900 dark:text-gray-400 "><%= value %></span>
+      </div>
+    </div>
+  <% end %>
+
+<% end %>
